# 6520_Rust

./: Cargo.toml  README.md
examples/: framebuffer_test.asm  test_framebuffer_nonblocking.asm  test_load_offset.asm  test_program.asm  test_stats.asm
src/: cpu.rs  instruction.rs  lib.rs  main.rs  memory.rs
tests/integration/: framebuffer_integration.rs  mod.rs  sample_programs.rs
tests/property/: addressing_mode_properties.rs  arithmetic_instruction_properties.proptest-regressions  arithmetic_instruction_properties.rs  branch_instruction_properties.rs  command_line_parsing_properties.proptest-regressions  command_line_parsing_properties.rs  control_flow_properties.proptest-regressions  control_flow_properties.rs  error_handling_properties.proptest-regressions  error_handling_properties.rs  execution_statistics_properties.rs  flag_properties.rs  framebuffer_properties.proptest-regressions  framebuffer_properties.rs  load_instruction_properties.proptest-regressions  load_instruction_properties.rs  logical_instruction_properties.proptest-regressions  logical_instruction_properties.rs  memory_properties.rs  mod.rs  opcode_properties.rs  pc_advancement_properties.rs  stack_properties.rs  step_execution_properties.proptest-regressions  step_execution_properties.rs  store_instruction_properties.rs
tests/unit/: addressing_modes.rs  arithmetic_instructions.rs  breakpoint.rs  command_line_parsing.rs  comparison_branch_instructions.rs  control_flow_stack_instructions.rs  cpu_initialization.rs  display_state.rs  edit_command.rs  emulator_initialization.rs  error_handling.rs  (+18 more)
